add get Photo
